...
          tabBarStyle: styles.tabBarStyle,
        }}
      >
        <Tabs.Screen
          name="index"
          options={tabOptions({
            title: "Home",
            lottie: "home",
          })}
        />
        <Tabs.Screen
          name="customers"
          options={tabOptions({
...
